--- a/package.json
+++ b/package.json
@@ -5,16 +5,32 @@
   "main": "src/index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "client": "node src/client.js",
+    "server_V": "node src/server_V.js",
+    "server_AS_TGS": "node src/server_AS_TGS.js",
+    "test": "nyc mocha test/",
+    "lint": "eslint src/ && eslint test/"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ChristopherBilg/CIS3319-5.git"
   },
-  "author": "Chris Bilger",
+  "author": "Christopher Bilger",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ChristopherBilg/CIS3319-5/issues"
   },
-  "homepage": "https://github.com/ChristopherBilg/CIS3319-5#readme"
+  "homepage": "https://github.com/ChristopherBilg/CIS3319-5#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "mocha": "^7.1.1",
+    "nyc": "^15.0.0"
+  }
 }
